--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@
   <head>
     <title>Should I use miles or cash?</title>
     <meta charset="utf-8" />
-    <script src="source.js" type="text/javascript" charset="utf-8"></script>
+
+    <style type="text/css" media="screen">
+      #app {
+        margin: auto;
+        width: 600px;
+        background-color: grey;
+      }
+      .left {
+        float: left;
+      }
+      .right {
+        float: right;
+      }
+    </style>
+
   </head>
   <body>
     <div id="app"></div>
+
+    <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
