--- a/index.html
+++ b/index.html
@@ -4,19 +4,7 @@
     <title>Should I use miles or cash?</title>
     <meta charset="utf-8" />
 
-    <style type="text/css" media="screen">
-      #app {
-        margin: auto;
-        width: 600px;
-        background-color: grey;
-      }
-      .left {
-        float: left;
-      }
-      .right {
-        float: right;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
   </head>
   <body>
