--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <body>
     <div id="app"></div>
 
+    <footer>
+      Made by <a href="http://kswizz.com">Kenneth Ballenegger</a>.
+    </footer>
+
     <script src="bundle.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
