--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Should I use miles or cash?</title>
     <meta charset="utf-8" />
 
-    <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 
   </head>
